update spring, java, clean constructors